<resources>
    <string name="app_name">Win March</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_history">History</string>
    <string name="menu_home">Home</string>
    <string name="menu_future_games">Future Games</string>
    <string name="menu_outcome">Outcome</string>
    <string name="menu_predict_game">Predict Game</string>
    <string name="menu_settings">Information</string>
    <string name="menu_saved_predictions">Saved Predictions</string>
</resources>
