<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homebutton"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_predict_game"
            android:icon="@drawable/add"
            android:title="@string/menu_predict_game" />
        <item
            android:id="@+id/nav_outcome"
            android:icon="@drawable/basketball"
            android:title="@string/menu_outcome" />
        <item
            android:id="@+id/nav_future_games"
            android:icon="@drawable/update"
            android:title="@string/menu_future_games" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
    </group>

</menu>
